# claude-recall

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
scripts/: cli.py  config.py  daemon.py  indexer.py  pyproject.toml  searcher.py
src/claude_recall/: cli.py  config.py  daemon.py  indexer.py  searcher.py
